welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:29: error: ')' expected but '}' found.
	}					
        ^